# llm-expense-tracker

./: .gitignore  README.md  docker-compose.yml  env.example  package-lock.json  package.json  railway.toml  turbo.json
apps/bot/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  env.template  knexfile.js  package.json  pyproject.toml  pyrightconfig.json  railway.toml  requirements.txt  setup-dev.sh
apps/bot/database/migrations/: 001_create_users_table.js  002_create_expenses_table.js  003_create_message_queue_table.js  004_enable_pgmq_queues.js
apps/bot/database/seeds/: 001_test_users.js
apps/bot/migrations/: 20250822000001_create_users_table.js  20250822000002_create_expenses_table.js
apps/bot/src/: main.py
apps/bot/src/application/jobs/: message_processing_job.py  response_sending_job.py
apps/bot/src/application/services/: message_processor.py  user_service.py  worker_processor.py
apps/bot/src/config/: settings.py
apps/bot/src/domain/entities/: expense.py  message.py  user.py
apps/bot/src/domain/interfaces/: expense_categories_repository.py  expense_parser.py  expense_repository.py  expense_tool.py  job_factory.py  message_classifier.py  queue_service.py  tool_factory.py  user_repository.py
apps/bot/src/infrastructure/providers/: rabbitmq_provider.py  supabase_provider.py
apps/bot/src/infrastructure/repositories/: expense_repository.py  fixed_expense_categories_repository.py  user_repository.py
apps/bot/src/infrastructure/services/: expense_tool_factory.py  hybrid_message_classifier.py  openai_expense_parser.py  rabbitmq_job_factory.py  supabase_job_factory.py  supabase_queue_service.py
apps/bot/src/infrastructure/tools/: __init__.py  add_expense_tool.py  get_expenses_by_category_tool.py  get_recent_expenses_tool.py
apps/bot/src/infrastructure/utils/: queue_utils.py
apps/bot/src/presentation/routers/: health.py
apps/bot/tests/infrastructure/services/: test_supabase_queue_service.py
apps/connector/: .dockerignore  Dockerfile  env.template  package.json  railway.toml  tsconfig.json
apps/connector/src/: app.module.ts  main.ts
apps/connector/src/application/jobs/: telegram-message-processing.job.ts  telegram-response-sending.job.ts
apps/connector/src/application/services/: message-processor.service.ts  worker-processor.service.ts
apps/connector/src/config/: configuration.ts
apps/connector/src/domain/entities/: telegram-message.entity.ts
apps/connector/src/domain/interfaces/: job-factory.interface.ts  queue.interface.ts  telegram.interface.ts
apps/connector/src/infrastructure/constants/: injection-tokens.ts
apps/connector/src/infrastructure/providers/: rabbitmq.provider.ts  supabase.provider.ts  telegram-http-client.provider.ts
apps/connector/src/infrastructure/services/: rabbitmq-job-factory.service.ts  supabase-job-factory.service.ts  supabase-queue.service.ts  telegram-polling.service.ts  telegram.service.ts
apps/connector/src/infrastructure/services/__tests__/: dependency-injection.spec.ts
apps/connector/src/infrastructure/utils/: queue-utils.ts
apps/connector/src/presentation/controllers/: health.controller.ts  telegram.controller.ts
apps/connector/src/presentation/dtos/: telegram-webhook.dto.ts
apps/connector/src/utils/: httpClient.ts
apps/connector/test/application/services/: message-processor.service.spec.ts
apps/connector/test/infrastructure/services/: telegram-polling.service.spec.ts
scripts/: dev-setup.sh
supabase/: config.toml  create-migration.sh  dev-setup.sh
supabase/migrations/: 001_create_users_table.sql  002_create_expenses_table.sql  003_create_message_queue_table.sql  004_enable_pgmq_queues.sql
